--- a/src/outcss/main.css
+++ b/src/outcss/main.css
@@ -10,7 +10,7 @@
 
 body {
     background-color: var(--bg);
-    height: 200vh;
+    height: 300vh;
     margin: 0rem;
     overflow-x: hidden;
     cursor: none;
@@ -340,12 +340,134 @@ body::-webkit-scrollbar-track {
 }
 .grid2img {
     position: absolute;
-    opacity: 0.05;
+    opacity: 0.1;
     scale: 3.5;
 
     bottom: 0px;
     right: 0px;
 
     transition: scale 0.5s ease;
+}
+
+.sec3 {
+    position: absolute;
+    background-color: transparent;
+    width: 90vmax;
+    height: 20vmax;
+
+    top: calc(250% - 10vmax);
+    left: calc(50% - 45vmax);
+
+    z-index: 99;
+}
+.sec3dec {
+    position: absolute;
+    background-color: var(--bg2);
+    box-shadow: 0px 0px 0px 0.1vmax var(--out);
+    width: 100%;
+    height: 3.5vmax;
+
+    border-radius: 1vmax;
+
+    top: 0px;
+}
+.sec3title {
+    position: absolute;
+    color: var(--pri);
+    opacity: 1;
+    font-family: gabarito,sans-serif;
+    font-size: 1.75vmax;
+    letter-spacing: 0.8px;
+
+    left: 1vmax;
+    top: -0.5vmax;
+}
+.change1, .change2, .change3 {
+    position: absolute;
+    background-color: var(--bg2);
+    box-shadow: 0px 0px 0px 0.1vmax var(--out);
+    width: calc(33.3% - 0.6vmax);
+    height: calc(100% - 4.3vmax);
+    border-radius: 1vmax;
+    overflow: hidden;
+
+    transition: scale 0.3s ease, box-shadow 0.3s ease;
+}
+.change1 {
+    bottom: 0px;
+    left: 0px;
+}
+.change2 {
+    bottom: 0px;
+    left: calc(33.3% + 0.3vmax);
+}
+.change3 {
+    bottom: 0px;
+    left: calc(66.6% + 0.6vmax);
+}
+
+.change1 > img, .change2 > img, .change3 > img {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    opacity: 0.3;
+
+    transition: scale 0.3s ease, opacity 0.3s ease;
+}
+
+.change1 > .changetext, .change2 > .changetext, .change3 > .changetext {
+    position: absolute;
+    color: var(--txt);
+    background-color: transparent;
+    font-family: gabarito,sans-serif;
+    font-size: 1.5vmax;
+    z-index: 2;
+    border-radius: 1vmax;
+    padding-left: 0.5vmax;
+    padding-right: 0.5vmax;
+    padding-top: 0.2vmax;
+    padding-bottom: 0.2vmax;
+
+    left: 1vmax;
+
+    transition: color 0.3s ease, background-color 0.3s ease;
+}
+.change1 > .changedesc, .change2 > .changedesc, .change3 > .changedesc {
+    position: absolute;
+    background-color: rgba(10,10,10,0.7);
+    width: calc(50% - 1vmax);
+    color: var(--txt);
+    border-radius: 1vmax;
+    font-family: poppins,sans-serif;
+    font-size: calc(0.7vmax);
+    letter-spacing: 0.5px;
+    left: 0.5vmax;
+    opacity: 0;
+    padding-left: 1vmax;
+    padding-right: 1vmax;
+    padding-top: 0.5vmax;
+    padding-bottom: 0.5vmax;
+
+    top: 4vmax;
+    left: 1vmax;
+
+    z-index: 2;
+    transition: top 1s ease, opacity 0.5s ease;
+}
+.change1:hover, .change2:hover, .change3:hover {
+    scale: 1.02;
+    box-shadow: 0px 0px 0px 0.1vmax var(--pri);
+}
+.change1:hover > img, .change2:hover > img, .change3:hover > img {
+    scale: 1.05;
+    opacity: 0.7;
+}
+.change1:hover > .changedesc, .change2:hover > .changedesc, .change3:hover > .changedesc {
+    top: 3vmax;
+    opacity: 1;
+}
+.change1:hover > .changetext, .change2:hover > .changetext, .change3:hover > .changetext {
+    color: var(--pri);
+    background-color: var(--sec);
 }
 
