please watch bluey its like the best show  www.bluey.tv

--- a/profile/framework/src/main.css
+++ b/profile/framework/src/main.css
@@ -1,384 +1,111 @@
-
-
-
-.main {
-    position: absolute;
-    background-color: var(--bg);
-    height: calc(100% - 200px - 25px);
-    width: calc(100% - 50px);
-    overflow-Y: hidden;
-
-    border-radius: 25px;
-
-    bottom: 25px;
-    left: 25px;
+:root {
+    --bg: #070707;
+    --bg2: #161616;
+    --theme: #d7d7d7;
 }
-
-.profilemain {
-    position: absolute;
-    background-color: var(--bg2);
-    height: 200px;
-    width: 100%;
-
-    border-radius: 25px 25px 0px 0px;
-    box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.7);
+body {
+    background: var(--bg);
+    overflow: hidden;
 }
-.profilepicture {
+.background {
     position: absolute;
-    top: 100px;
-    left: 100px;
-    z-index: 6;
-
-    width: 250px;
-    height: 248px;
-
-    border-radius: 25px;
-    transition: box-shadow 0.1s ease;
-}
-.profilepicture > img {
-    border-radius: 25px;
-    opacity: 1;
-
+    background: transparent;
     height: 100%;
-    width: 100%;
+    aspect-ratio: 16 / 9;
+    left: 50%;
+    translate: -50%;
+    top: 0;
 }
-.profilepicture2 {
+#block {
     position: absolute;
-    pointer-events: none;
-    z-index: 5;
-    opacity: 1;
-    top: 100px;
-    left: 100px;
-    box-shadow:
-    0px 0px 0px 10px var(--bg2);
-
-    width: 250px;
-    height: 248px;
-
-    border-radius: 25px;
+    background: var(--bg2);
+    border-radius: 1vmax;
 }
-.profilepicture2 > img {
-    border-radius: 25px;
-    filter: blur(0px);
-    opacity: 1;
-
-    height: 100%;
-    width: 100%;
-    transition: filter 0.5s ease;
+.box1 {
+    height: calc(33.3% - 1vmax);
+    width: calc(25% - 0.125vmax);
+    top: 1vmax;
+    left: 1vmax;
 }
-.username {
+.box2 {
+    height: calc(33.3% - 1vmax);
+    width: calc(25% - 0.125vmax);
+    top: calc(33.3% + 0.5vmax);
+    left: 1vmax;
+}
+.box3 {
+    height: calc(33.3% - 1vmax);
+    width: calc(25% - 0.125vmax);
+    bottom: 1vmax;
+    left: 1vmax;
+}
+
+.box4 {
+    height: calc(16.65% - 0.8vmax);
+    width: calc(25% - 0.125vmax);
+    top: 1vmax;
+    left: calc(25% + 1.35vmax);
+}
+.box5 {
+    height: calc(16.65% - 0.8vmax);
+    width: calc(25% - 0.125vmax);
+    top: calc(65% + 1vmax);
+    left: calc(25% + 1.35vmax);
+}
+.box6 {
+    height: calc(16.65% - 0.8vmax);
+    width: calc(25% - 0.125vmax);
+    bottom: 1vmax;
+    left: calc(25% + 1.35vmax);
+}
+
+.box7 {
+    height: calc(16.65% - 0.8vmax);
+    width: calc(25% - 0.125vmax);
+    top: 1vmax;
+    left: calc(50% + 1.7vmax);
+}
+.box8 {
+    height: calc(50% - 1.2vmax);
+    width: calc(50% + 0.2vmax);
+    top: calc(16% + 1vmax);
+    left: calc(25% + 1.35vmax);
+}
+.box9 {
+    height: calc(33.3% - 1vmax);
+    width: calc(25% - 0.125vmax);
+    bottom: 1vmax;
+    left: calc(50% + 1.7vmax);
+}
+
+.box11 {
+    height: calc(16.65% - 0.8vmax);
+    width: calc(22% - 0.075vmax);
+    bottom: 1vmax;
+    right: 1vmax;
+}
+.box12 {
+    height: calc(16.65% - 0.8vmax);
+    width: calc(22% - 0.075vmax);
+    top: calc(65% + 1vmax);
+    right: 1vmax;
+}
+.box10 {
+    height: calc(65% - 0.6vmax);
+    width: calc(22% - 0.075vmax);
+    top: 1vmax;
+    right: 1vmax;
+}
+
+
+
+
+
+.box11 > img {
     position: absolute;
-    color: var(--theme);
-
-    font-family: mint,sans-serif;
-    font-size: 90px;
-
-    left: 400px;
-}
-
-.tags {
-    position: absolute;
-    background-color: var(--bg);
-    height: calc(100% - 55px);
-    aspect-ratio: 3.3/1;
-    border-radius: 15px;
-    top: 30px;
-    right: 30px;
-}
-
-.owner {
-    position: absolute;
-    background-color: var(--bg2);
-    height: 50px;
-    width: 200px;
-    border-radius: 10px;
-    top: 80px;
-    right: 15px;
-    overflow: hidden;
-}
-.ownerdec {
-    position: absolute;
-    background-color: #ff3f3f;
-    height: 100%;
-    aspect-ratio: 1/1;
-}
-.ownertext {
-    position: absolute;
-    color: #ff3f3f;
-
-    font-family: mint,sans-serif;
-    font-size: 38px;
-    top: -17px;
-    left: 75px;
-}
-
-.dev {
-    position: absolute;
-    background-color: var(--bg2);
-    height: 50px;
-    width: 230px;
-    border-radius: 10px;
-    top: 15px;
-    right: 15px;
-    overflow: hidden;
-}
-.devdec {
-    position: absolute;
-    background-color: #38a825;
-    height: 100%;
-    aspect-ratio: 1/1;
-}
-.devtext {
-    position: absolute;
-    color: #38a825;
-
-    font-family: mint,sans-serif;
-    font-size: 38px;
-    top: -17px;
-    left: 75px;
-}
-.member {
-    position: absolute;
-    background-color: var(--bg2);
-    height: 50px;
-    width: 200px;
-    border-radius: 10px;
-    top: 15px;
-    right: 262px;
-    overflow: hidden;
-}
-.memberdec {
-    position: absolute;
-    background-color: #45e4f3;
-    height: 100%;
-    aspect-ratio: 1/1;
-}
-.membertext {
-    position: absolute;
-    color: #45e4f3;
-
-    font-family: mint,sans-serif;
-    font-size: 38px;
-    top: -17px;
-    left: 70px;
-}
-.beta {
-    position: absolute;
-    background-color: var(--bg2);
-    height: 50px;
-    width: 170px;
-    border-radius: 10px;
-    top: 80px;
-    right: 230px;
-    overflow: hidden;
-}
-.betadec {
-    position: absolute;
-    background-color: #ff953f;
-    height: 100%;
-    aspect-ratio: 1/1;
-}
-.betatext {
-    position: absolute;
-    color: #ff953f;
-
-    font-family: mint,sans-serif;
-    font-size: 38px;
-    top: -17px;
-    left: 75px;
-}
-
-.about {
-    position: absolute;
-    background-color: var(--bg2);
-    width: 500px;
-    height: 150px;
-    top: 215px;
-    overflow: hidden;
-
-    border-radius: 25px;
-    box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
-
-    left: 15px;
-}
-.aboutme {
-    position: absolute;
-    color: var(--theme);
-    background-color: rgba(0,0,0,0.2);
-    box-shadow: 0px 0px 15px 0px rgba(0,0,0,1);
-    white-space: nowrap;
-
-    font-family: mint,sans-serif;
-    font-size: 38px;
-
-    padding: 10px 100% 5px 25px;
-
-    top: -25px;
-}
-.aboutmetext {
-    position: absolute;
-    color: rgba(150,150,150,1);
-
-    font-family: mint,sans-serif;
-    font-size: 30px;
-    top: 50px;
-    left: 25px;
-}
-.status {
-    position: absolute;
-    background-color: var(--bg2);
-    width: calc(100% - 545px);
-    height: 150px;
-    top: 215px;
-
-    border-radius: 25px;
-    box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
-
-    right: 15px;
-}
-.coins {
-    position: absolute;
-    background-color: var(--bg);
-    height: calc(100% - 20px);
-    width: calc(50% - 15px);
-
-    border-radius: 15px;
-
-    left: 10px;
-    top: 10px;
-}
-.coinsme {
-    color: var(--theme);
-    text-align: center;
-    margin-top: 45px;
-
-    font-family: mint,sans-serif;
-    font-size: 55px;
-}
-.coinsme2 {
-    color: white;
-}
-.coinstut {
-    pointer-events: none;
-    position: absolute;
-    background-color: var(--bg2);
-    opacity: 0;
-    width: 100%;
-    border-radius: 15px;
-    overflow: hidden;
-    top: 120px;
-    transition: top 1.5s ease, opacity 0.7s ease 0.4s;
-}
-.coinstutdec {
-    position: absolute;
-    background-color: var(--theme);
-    top: 0px;
-    height: 7px;
-    width: 100%;
-}
-.coinstut2 {
-    color: rgba(150,150,150,1);
-    text-align: center;
-    margin-top: 25px;
-    margin-left: 10%;
-    width: 80%;
-
-    font-family: mint,sans-serif;
-    font-size: 30px;
-}
-.coinscolor {
-    color: var(--theme);
-}
-.time {
-    position: absolute;
-    background-color: var(--bg);
-    height: calc(100% - 20px);
-    width: calc(50% - 15px);
-
-    border-radius: 15px;
-
-    right: 10px;
-    top: 10px;
-}
-.timeme {
-    color: var(--theme);
-    text-align: center;
-    margin-top: 45px;
-
-    font-family: mint,sans-serif;
-    font-size: 55px;
-}
-.timeme2 {
-    color: white;
-}
-
-.modify {
-    position: absolute;
-    background-color: rgba(0,0,0,0.5);
-    opacity: 0.2;
-    height: 50px;
-    aspect-ratio: 1/1;
-    border-radius: 10px;
-    right: 10px;
-    top: 10px;
-    transition: opacity 0.3s ease;
-}
-.modify > img {
-    position: absolute;
-    height: 35px;
-    top: 7.5px;
-    left: 7.5px;
-    transition: scale 0.7s cubic-bezier(.45,.01,.44,1.4);
-}
-
-.penalty {
-    position: absolute;
-    background-color: var(--bg2);
-    overflow: hidden;
-    opacity: 1;
-    height: 50px;
-    width: 180px;
-    border-radius: 25px;
-    box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
-    left: 10px;
-    bottom: 10px;
-    transition: width 0.5s ease, height 0.5s ease;
-}
-.penalty2 {
-    color: var(--theme);
-    font-family: mint,sans-serif;
-
-    text-align: center;
-
-    margin-top: 12px;
-}
-.active1 {
-    position: absolute;
-    background-color: var(--bg);
-    opacity: 0;
-    height: 40px;
-    width: calc(100% - 20px);
-    border-radius: 25px;
-    left: 10px;
-    top: 50px;
-    transition: opacity 0.3s ease 0.5s;
-}
-.active1dec {
-    position: absolute;
-    background-color: black;
-    height: calc(100% - 5px);
-    aspect-ratio: 1/1;
-    border-radius: 50%;
-    animation: penaltyFlash 3s infinite;
-    top: 2.5px;
-    left: 2.5px;
-}
-.active1text {
-    position: absolute;
-    color: rgba(150,150,150,1);
-    font-family: mint,sans-serif;
-    font-size: 25px;
-
-    margin-top: 5%;
-    left: 50px;
+    height: 80%;
+    aspect-ratio: 1 / 1;
+    border-radius: 1vmax;
+    top: 10%;
+    left: calc(50% - 46%);
 }
