--- a/profile/framework/src/fonts.css
+++ b/profile/framework/src/fonts.css
@@ -25,3 +25,11 @@ src: url('fonts/visbold.otf') format('truetype');
 font-family: 'visr';
 src: url('fonts/visregular.otf') format('truetype');
 }
+@font-face {
+font-family: 'gabarito';
+src: url('fonts/gabarito.ttf') format('truetype');
+}
+@font-face {
+font-family: 'poppins';
+src: url('fonts/poppins.ttf') format('truetype');
+}
