wow a new cursor crazy

--- a/src/outcss/loading.css
+++ b/src/outcss/loading.css
@@ -22,12 +22,15 @@
 @keyframes pulse2 {
     0% {
         background-color: var(--pri);
+        scale: 0.9;
     }
     50% {
         background-color: var(--acc);
+        scale: 1.1;
     }
     100% {
         background-color: var(--pri);
+        scale: 0.9;
     }
 }
 @keyframes lloading {
@@ -136,7 +139,7 @@
     bottom: 1vmax;
     left: 2vmax;
 
-    animation: pulse 5s infinite ease-in-out;
+    animation: pulse 2.5s infinite ease-in-out;
 }
 .loadingline {
     position: absolute;;
@@ -224,21 +227,21 @@
     scale: 0.9;
 }
 .loadingblock {
-    animation: pulse2 5s infinite;
+    animation: pulse2 2.5s infinite ease-in-out;
 }
 .loadingblock2 {
     left: 20%;
-    animation: pulse2 5s infinite 0.5s;
+    animation: pulse2 2.5s infinite 0.2s ease-in-out;
 }
 .loadingblock3 {
     left: 40%;
-    animation: pulse2 5s infinite 1s;
+    animation: pulse2 2.5s infinite 0.4s ease-in-out;
 }
 .loadingblock4 {
     left: 60%;
-    animation: pulse2 5s infinite 1.5s;
+    animation: pulse2 2.5s infinite 0.6s ease-in-out;
 }
 .loadingblock5 {
     left: 80%;
-    animation: pulse2 5s infinite 2s;
+    animation: pulse2 2.5s infinite 0.8s ease-in-out;
 }
