--- a/client/css/fonts.css
+++ b/client/css/fonts.css
@@ -1,18 +1,18 @@
 @font-face {
-font-family: 'Varela Round';
-src: url('fonts/varela.ttf') format('truetype');
+  font-family: 'Varela Round';
+  src: url('fonts/varela.ttf') format('truetype');
 }
 @font-face {
-font-family: 'moonr';
-src: url('fonts/moonreg.otf') format('truetype');
+  font-family: 'moonr';
+  src: url('fonts/moonreg.otf') format('truetype');
 }
 @font-face {
-font-family: 'moonl';
-src: url('fonts/moonlight.otf') format('truetype');
+  font-family: 'moonl';
+  src: url('fonts/moonlight.otf') format('truetype');
 }
 @font-face {
-font-family: 'moonb';
-src: url('fonts/moonbold.otf') format('truetype'); }
+  font-family: 'moonb';
+  src: url('fonts/moonbold.otf') format('truetype'); }
 @font-face {
 font-family: 'mint';
 src: url('fonts/mint.otf') format('truetype');
@@ -24,4 +24,12 @@ src: url('fonts/visbold.otf') format('truetype');
 @font-face {
 font-family: 'visr';
 src: url('fonts/visregular.otf') format('truetype');
+}
+@font-face {
+font-family: 'gabarito';
+src: url('fonts/gabarito.ttf') format('truetype');
+}
+@font-face {
+font-family: 'poppins';
+src: url('fonts/poppins.ttf') format('truetype');
 }
