--- a/src/outcss/main.css
+++ b/src/outcss/main.css
@@ -1075,6 +1075,8 @@ body::-webkit-scrollbar-track {
     opacity: 0;
     height: 8vmax;
     width: calc(50% - 1.25vmax);
+
+    transition: box-shadow 0.3s ease;
 }
 .faqbox1 {
     opacity: 1;
@@ -1193,4 +1195,11 @@ body::-webkit-scrollbar-track {
     pointer-events: none;
 
     opacity: 0;
+}
+
+.faqbox1:hover, .faqbox2:hover, .faqbox3:hover, .faqbox4:hover, .faqbox5:hover, .faqbox6:hover {
+    box-shadow: 0px 0px 0px 0.1vmax var(--pri);
+}
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: var(--out);
 }
